--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="" type="" href="" />
+    <link rel="icon" type="image/svg+xml" href="/src/componets/Icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Citações</title>
   </head>
